--- a/src/sass/common/_global.scss
+++ b/src/sass/common/_global.scss
@@ -76,6 +76,15 @@ a {
   text-decoration: none;
 }
 
+code {
+    background: $wonderGrey100;
+}
+
+pre code {
+    padding: 16px;
+    border-radius: 3px;
+}
+
 fieldset {
   padding: 0;
   margin: 0;
